@@ -1,3 +1,6 @@
+9 April 2025: Wouter
+	- Fix to detect if atomic_store links in configure.
+
 8 April 2025: Wouter
 	- Tag for 1.23.0rc1.
 	- Fix fast_reload to print chroot with config file name.
